--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "main": "index.js",
   "repository": "https://github.com/handlebauer/init-project.git",
   "author": "Donald Geddes",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@hbauer/eslint-config": "^1.2.1",
+    "@hbauer/prettier-config": "^1.1.0",
+    "eslint": "^8.8.0",
+    "prettier": "^2.5.1"
+  }
 }
