--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@hbauer/init-project",
   "version": "0.0.0",
   "description": "Ease into it",
-  "main": "index.js",
+  "type": "module",
+  "bin": "./bin/index.js",
   "repository": "https://github.com/handlebauer/init-project.git",
   "author": "Donald Geddes",
   "license": "MIT",
