--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@hbauer/prettier-config": "^1.1.0",
     "eslint": "^8.8.0",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "zx": "^4.3.0"
   }
 }
