--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ease into it",
   "type": "module",
   "bin": "./index.js",
+  "files": ["index.js", "src"],
   "repository": "https://github.com/handlebauer/init-project.git",
   "author": "Donald Geddes",
   "license": "MIT",
