--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.7.2",
   "description": "Ease into it",
   "type": "module",
-  "bin": "./index.js",
+  "bin": "./index.mjs",
   "files": [
     "index.mjs",
     "src"
