--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hbauer/init-project",
-  "version": "0.7.7",
+  "version": "0.7.8-0",
   "description": "Ease into it",
   "type": "module",
   "bin": "./index.js",
