--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
+    "@hbauer/init-project": "^0.7.8",
     "enquirer": "^2.3.6",
     "zx": "^4.3.0"
   }
