--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@hbauer/init-project": "^0.7.8",
+    "clipboardy": "^3.0.0",
     "enquirer": "^2.3.6",
     "zx": "^4.3.0"
   }
