Move to shell-first approach with husky configuration

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "prettier": "@hbauer/prettier-config",
   "eslintConfig": {
-    "extends": "@hbauer/eslint-config"
+    "extends": "@hbauer/eslint-config",
+    "ignorePatterns": "template"
   },
   "devDependencies": {
     "@hbauer/eslint-config": "^1.2.1",
