--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@hbauer/eslint-config": "^1.2.1",
     "@hbauer/prettier-config": "^1.1.0",
+    "@types/node": "^18.16.2",
     "eslint": "^8.8.0",
     "prettier": "^2.5.1"
   },
