--- a/static/express/jsconfig.json
+++ b/static/express/jsconfig.json
@@ -11,6 +11,10 @@
     "module": "esnext",
     "moduleResolution": "node",
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"],
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
 }
