--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "ignorePatterns": "static"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/eslint-parser": "^7.21.8",
+    "@babel/plugin-syntax-import-assertions": "^7.20.0",
     "@hbauer/eslint-config": "^1.2.1",
     "@hbauer/prettier-config": "^1.1.0",
     "@types/node": "^18.16.2",
     "eslint": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "prettier": "^2.5.1"
   },
   "dependencies": {
